# elastio_rust_test_weather

./: .gitignore  Cargo.toml  README.md
.github/workflows/: audit.yaml  nightly_lints_ci.yaml  rust-clippy.yml  rust.yml
src/: config.rs  data.rs  main.rs  providers.rs  ui.rs
src/ui/: bar_chart.rs
