[package]
name = "weather"
version = "0.1.0"
edition = "2021"
authors = ["Vitalii Lukyanov <tukanoid@outlook.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli
clap = { version = "4",  features = ["derive"]}
tui = "0.19.0"
crossterm = "0.26.0"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# API requests
reqwest = { version = "0.11.14", features = ["serde_json"] }

# Misc
dirs = "4"
color-eyre = "0.6"
enum-iterator = "1.3"
geocoding = "0.4"
chrono = "0.4.23"
dateparser = "0.1.8"
itertools = "0.10.5"
unicode-width = "0.1.10"

[build-dependencies]
built = "0.6"